Fixed overflow of select boxes in modals

--- a/app/assets/stylesheets/primero/page.scss
+++ b/app/assets/stylesheets/primero/page.scss
@@ -262,6 +262,7 @@ table.dataTable.dtr-inline.collapsed tbody tr.parent th:first-child:before {
 
 .reveal {
   background: $desat_green_color;
+  overflow-y: initial;
 
   fieldset {
     padding: rem_calc(10);
